--- a/src/home.html
+++ b/src/home.html
@@ -4,21 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Naol</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <div class="page">
          <header>
+            <h2 class="logo">Naol's <span>Portfolio</span></h2>
             <nav>
-                <h2 class="logo">Naol's <span>Portfolio</span></h2>
-                <ul>
-                    <li> <a href="home.html">Home</a></li>
-                    <li><a href="about.html" target="_blank">About Me</a></li>
-                    <li><a href="hobbies.html" target="_blank">Hobbies</a></li>
-                    <li><a href="contact.html" target="_blank">Contact</a></li>
-                    <li><a href="cv.html" target="_blank">CV</a></li>
-            </ul>
-            
-        </nav>
+                <div class="menu-icon">
+                  <div class="bar"></div>
+                  <div class="bar"></div>
+                  <div class="bar"></div>
+                </div>
+            </nav>
     </header>
         <section class="content">
                 <h3>Hello, My Name is</h3>
@@ -26,9 +24,11 @@
                 <h2>I am a Software Engineering Student.</h2>
         </section>
     </div>
-    <button onclick="window.location.href='about.html'">Next</button>
+    <div class="container">
+        <button class="next-btn" onclick="window.location.href='about.html'">Next</button>
+    </div>
 
-    <footer>
+    <footer class="footer">
         <nav>
             <ul>
                 <li><a href="https://x.com/N1sup">twitter</a></li>
