--- a/src/contact.html
+++ b/src/contact.html
@@ -4,19 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
+        <h2 class="logo">Naol's <span>Portfolio</span></h2>
         <nav>
-            <h2 class="logo">Naol's <span>Portfolio</span></h2>
-            <ul>
-                <li> <a href="home.html" target="_blank">Home</a></li>
-                <li><a href="about.html" target="_blank">About</a></li>
-                <li><a href="hobbies.html" target="_blank">Hobbies</a></li>
-                <li><a href="contact.html" target="_blank">Contact</a></li>
-                <li><a href="cv.html" target="_blank">CV</a></li>
-            </ul>
-    </nav>
+            <div class="menu-icon">
+              <div class="bar"></div>
+              <div class="bar"></div>
+              <div class="bar"></div>
+            </div>
+        </nav>
 </header>
     <section id="contact">
         <h2>Contact Me</h2>
@@ -43,10 +42,11 @@
         <p>LinkedIn: <a href="https://www.linkedin.com/in/" target="_blank">LinkedIn</a></p>
     </section>
     <figure>
-        <img src="images/prof.jpg" alt="my twitter profile">
+        <img class="profile" src="images/prof.jpg" alt="my twitter profile">
     </figure>
-<button onclick="window.location.href='hobbies.html'">previous</button>
-<button onclick="window.location.href='cv.html'">Next</button>
+    <div class="container"><button class="previous-btn" onclick="window.location.href='hobbies.html'">previous</button>
+        <button class="next-btn" onclick="window.location.href='cv.html'">Next</button>
+    </div>
 <footer>
     <nav>
         <ul>
