--- a/src/cv.html
+++ b/src/cv.html
@@ -4,19 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My CV</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
+        <h2 class="logo">Naol's <span>Portfolio</span></h2>
         <nav>
-            <h2 class="logo">Naol's <span>Portfolio</span></h2>
-            <ul>
-                <li> <a href="home.html" target="_blank">Home</a></li>
-                <li><a href="about.html" target="_blank">About</a></li>
-                <li><a href="hobbies.html" target="_blank">Hobbies</a></li>
-                <li><a href="contact.html" target="_blank">Contact</a></li>
-                <li><a href="cv.html" target="_blank">CV</a></li>
-            </ul>
-    </nav>
+            <div class="menu-icon">
+              <div class="bar"></div>
+              <div class="bar"></div>
+              <div class="bar"></div>
+            </div>
+        </nav>
 </header>
 <section id="cv">
     <h2>Curriculum Vitae</h2>
@@ -48,9 +47,9 @@
 
     </div>   
 </section>
-<button onclick="window.location.href='contact.html'">Previous</button>
+<button class="previous-btn" onclick="window.location.href='contact.html'">Previous</button>
 
-    <footer>
+    <footer class="footer">
         <nav>
             <ul>
                 <li><a href="https://x.com/N1sup">twitter</a></li>
