--- a/src/contact.html
+++ b/src/contact.html
@@ -18,7 +18,7 @@
         </nav>
 </header>
     <section id="contact">
-        <h2>Contact Me</h2>
+        <h2>Contact <span>Me</span></h2>
         <p>Feel free to reach out to me using the form below or through the provided contact information.</p>
 
         <form action="process_form.php" method="post">
@@ -31,7 +31,7 @@
             <label for="message">Your Message:</label>
             <textarea id="message" name="message" rows="4" required></textarea>
 
-            <button type="submit">Submit</button>
+            <button class="submit" type="submit">Submit</button>
         </form>
     </section>
     <section id="contact-info">
@@ -47,7 +47,7 @@
     <div class="container"><button class="previous-btn" onclick="window.location.href='hobbies.html'">previous</button>
         <button class="next-btn" onclick="window.location.href='cv.html'">Next</button>
     </div>
-<footer>
+<footer class="footer">
     <nav>
         <ul>
             <li><a href="https://x.com/N1sup">my twitter</a></li>
