--- a/src/contact.html
+++ b/src/contact.html
@@ -37,9 +37,9 @@
     <section id="contact-info">
         <h2>Contact Information</h2>
         <p>You can also reach me through the following channels:</p>
-        <p>Email: <a href="mailto:naolgezahegne@gmail.com">Email</a></p>
-        <p>Twitter: <a href="https://x.com/N1sup" target="_blank">Twitter</a></p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/" target="_blank">LinkedIn</a></p>
+        <p>Email: <a href="mailto:naolgezahegne@gmail.com">Email Me</a></p>
+        <p>Twitter: <a href="https://x.com/N1sup" target="_blank">My Twitter</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/" target="_blank">My LinkedIn</a></p>
     </section>
     <figure>
         <img class="profile" src="images/prof.jpg" alt="my twitter profile">
@@ -50,9 +50,9 @@
 <footer class="footer">
     <nav>
         <ul>
-            <li><a href="https://x.com/N1sup">my twitter</a></li>
-            <li><a href="https://linkedin.com/in/naol-gezahegne">my linkedin</a></li>
-            <li><a href="mailto:naolgezahegne@gmail.com">email me</a></li>
+            <li><a href="https://x.com/N1sup">twitter</a></li>
+            <li><a href="https://linkedin.com/in/naol-gezahegne">linkedin</a></li>
+            <li><a href="mailto:naolgezahegne@gmail.com">email</a></li>
         </ul>
     </nav>
     <p>&copy; 2023 Naol. All rights reserved.</p>
