--- a/src/hobbies.html
+++ b/src/hobbies.html
@@ -33,7 +33,7 @@
       
     </figure>
     <h3 id="music">Music</h3>
-    <p>Beyond my enjoyment of movies and books, I also allocate time in my leisure for the pleasure of music. Delving into the soundscape is a cherished activity for me, and among my preferred artists are Bruno Mars, Kanye West, J Cole, and Adele, among others. Each artist brings a unique flavor to my playlist, offering a diverse range of musical experiences. Currently, one particular song has captured my attention, becoming a favorite in the present moment.</p>
+    <p>Beyond my enjoyment of movies and books, I also allocate time in my leisure for the pleasure of music. Delving into the soundscape is a cherished activity for me, and among my preferred artists are Bruno Mars, Kanye West, J Cole, and Adele, among others. Each artist brings a unique flavor to my playlist, offering a diverse range of musical experiences. Currently <cite>Homecoming</cite> by Kanye West has captured my attention, becoming a favorite in the present moment.</p>
     <audio src="images/Homecoming.mp3" controls muted>
       Your browser does not support the audio tag.
     </audio>
