--- a/src/contact.html
+++ b/src/contact.html
@@ -7,16 +7,23 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <header>
-        <h2 class="logo">Naol's <span>Portfolio</span></h2>
+    <header class="header">
+        <h2 class="header__logo">Naol's <span>Portfolio</span></h2>
         <nav>
-            <div class="menu-icon">
-              <div class="bar"></div>
-              <div class="bar"></div>
-              <div class="bar"></div>
+            <ul>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="hobbies.html">Hobbies</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="cv.html">CV</a></li>
+            </ul>
+            <div class="header__menu-icon">
+                <div class="header__bar"></div>
+                <div class="header__bar"></div>
+                <div class="header__bar"></div>
             </div>
         </nav>
-</header>
+    </header>
     <section id="contact">
         <h2>Contact <span>Me</span></h2>
         <p>Feel free to reach out to me using the form below or through the provided contact information.</p>
@@ -44,8 +51,8 @@
     <figure>
         <img class="profile" src="images/prof.jpg" alt="my twitter profile">
     </figure>
-    <div class="container"><button class="previous-btn" onclick="window.location.href='hobbies.html'">previous</button>
-        <button class="next-btn" onclick="window.location.href='cv.html'">Next</button>
+    <div class="container"><button class="container__button container__button--previous" onclick="window.location.href='hobbies.html'">Previous</button>
+        <button class="container__button container__button--next" onclick="window.location.href='cv.html'">Next</button>
     </div>
 <footer class="footer">
     <nav>
