edited responsive design

--- a/src/home.html
+++ b/src/home.html
@@ -35,7 +35,7 @@
         <button class="container__button container__button--next" onclick="window.location.href='about.html'">Next</button>
     </div>
 
-    <footer class="footer">
+    <footer class ="footer-home">
         <nav>
             <ul>
                 <li><a href="https://x.com/N1sup">twitter</a></li>
