--- a/src/home.html
+++ b/src/home.html
@@ -17,7 +17,7 @@
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="cv.html">CV</a></li>
             </ul>
-            <div class="header__menu-icon">
+            <div class="header__menu-icon" onclick="toggleMenu()">
                 <div class="header__bar"></div>
                 <div class="header__bar"></div>
                 <div class="header__bar"></div>
@@ -43,6 +43,7 @@
         </nav>
         <p>&copy; 2023 Naol. All rights reserved.</p>
     </footer>
+    <script src="js/script.js"></script>
      
 </body>
 </html>
