--- a/src/about.html
+++ b/src/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Naol</title>
     <link rel="stylesheet" href="css/styles.css">
+    <script src="js/script.js"></script>
 <body>
     <header class="header">
         <h2 class="header__logo">Naol's <span>Portfolio</span></h2>
