--- a/src/contact.html
+++ b/src/contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
     <link rel="stylesheet" href="css/styles.css">
+    <script src="js/script.js"></script>
 </head>
 <body>
     <header class="header">
@@ -27,8 +28,7 @@
     <section id="contact">
         <h2>Contact <span>Me</span></h2>
         <p>Feel free to reach out to me using the form below or through the provided contact information.</p>
-
-        <form action="process_form.php" method="post">
+        <form action="process_form.php" id="myForm" method="post">
             <label for="name" >Your Name:</label>
             <input type="text" id="name" name="name" required>
 
