--- a/src/home.html
+++ b/src/home.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Naol</title>
     <link rel="stylesheet" href="css/styles.css">
+    <script src="js/script.js"></script>
 </head>
 <body>
     <header class="header">
@@ -17,7 +18,7 @@
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="cv.html">CV</a></li>
             </ul>
-            <div class="header__menu-icon" onclick="toggleMenu()">
+            <div class="header__menu-icon">
                 <div class="header__bar"></div>
                 <div class="header__bar"></div>
                 <div class="header__bar"></div>
@@ -43,7 +44,6 @@
         </nav>
         <p>&copy; 2023 Naol. All rights reserved.</p>
     </footer>
-    <script src="js/script.js"></script>
      
 </body>
 </html>
