--- a/src/about.html
+++ b/src/about.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Naol</title>
     <link rel="stylesheet" href="css/styles.css">
-    <script src="js/script.js"></script>
 <body>
     <header class="header">
         <h2 class="header__logo">Naol's <span>Portfolio</span></h2>
@@ -17,7 +16,7 @@
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="cv.html">CV</a></li>
             </ul>
-            <div class="header__menu-icon">
+            <div class="header__menu-icon" onclick="toggleMenu()">
                 <div class="header__bar"></div>
                 <div class="header__bar"></div>
                 <div class="header__bar"></div>
@@ -101,5 +100,6 @@
     </nav>
     <p>&copy; 2023 Naol. All rights reserved.</p>
 </footer>
+<script src="js/script.js"></script>
 </body>
 </html>
