--- a/src/cv.html
+++ b/src/cv.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My CV</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <script src="js/script.js"></script>
+    <link rel="stylesheet" href="css/styles.css">]
 </head>
 <body>
     <header class="header">
@@ -18,7 +17,7 @@
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="cv.html">CV</a></li>
             </ul>
-            <div class="header__menu-icon">
+            <div class="header__menu-icon" onclick="toggleMenu()">
                 <div class="header__bar"></div>
                 <div class="header__bar"></div>
                 <div class="header__bar"></div>
@@ -69,6 +68,6 @@
     </footer>
      
 
-    
+<script src="js/script.js"></script>
 </body>
 </html>
