--- a/src/hobbies.html
+++ b/src/hobbies.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Hobbies</title>
     <link rel="stylesheet" href="css/styles.css">
-    <script src="js/script.js"></script>
 </head>
 <body>
   <header class="header">
@@ -18,7 +17,7 @@
             <li><a href="contact.html">Contact</a></li>
             <li><a href="cv.html">CV</a></li>
         </ul>
-        <div class="header__menu-icon">
+        <div class="header__menu-icon" onclick="toggleMenu()">
             <div class="header__bar"></div>
             <div class="header__bar"></div>
             <div class="header__bar"></div>
